# CMGDB

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  requirements.txt  setup.py
.github/workflows/: build_publish_wheels.yml  build_test_wheels.yml  publish_pypi.yml
examples/: BoxMap_Data_Examples.ipynb  Compose_MG_Example.ipynb  Conley_Index_Examples.ipynb  Example_Graph_Map.ipynb  Example_Leslie_model.ipynb  Example_Leslie_model_3.ipynb  Examples.ipynb  Gaussian_Process_Example.ipynb  Gaussian_Process_Example_C++.ipynb  Gaussian_Process_Examples_New.ipynb  Gaussian_Process_for_NN.ipynb  Interval_Example.ipynb  ODE_Computations_Examples.ipynb  Order_Retraction_Example.ipynb  Periodic_Domain_Example.ipynb  Periodic_Domain_Examples.ipynb
examples/.ipynb_checkpoints/: Examples-checkpoint.ipynb
include/chomp/: Ring.h
include/database/: Atlas.h  AtlasGeo.h  ChompMap.h  CompressedTree.h  CompressedTreeGrid.h  Compute_Morse_Graph.hpp  Configuration.h  EdgeGrid.h  EuclideanParameterSpace.h  Geo.h  GraphTheory.h  GraphTheory.hpp  Grid.h  MapGraph.h  MorseGraph.h  ParameterSpace.h  PointerTree.h  PrismGeo.h  RankSelect.h  Real.h  RectGeo.h  SingleOutput.h  Tree.h  join.h
src/: CMGDB.cpp  Model.h  ModelMap.h  config.xml
src/CMGDB/: BoxMapData.py  ComputeBoxMap.py  LoadMorseSetFile.py  PlotMorseGraph.py  PlotMorseSets.py  SaveMorseData.py  __init__.py
src/CMGDB/_cmgdb/: CMGDB.cpp  Model.h  ModelMap.h  ModelMapF.h
src/CMGDB/_cmgdb/include/chomp/: ConleyIndex.h  CubicalComplex.h  FiberComplex.h  RelativeMapHomology.h
src/CMGDB/_cmgdb/include/database/: Compute_Morse_Graph.h  Compute_Morse_Graph.hpp  Configuration.h  Geo.h  Grid.h  IntersectionGeo.h  Map.h  MapGraph.h  Model.h  ModelMap.h  ModelMapF.h  ModelMapGP.h  ModelPointMapF.h  MorseGraph.h  PointerGrid.h  RectGeo.h  SuccinctGrid.h  SuccinctTree.h  TreeGrid.h  UniformGrid.h  UnionGeo.h  conleyIndexString.h  simple_interval.h
src/CMGDB/_cmgdb/include/libgp/: libgp.hpp
tests/: test_basic.py
